--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -21,5 +21,5 @@ jobs:
       - name: Achieve built binary
         uses: actions/upload-artifact@v4
         with:
-          name: built-binary
+          name: binary
           path: dist/slide-merger
