--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -25,6 +25,7 @@ jobs:
           path: dist/slide-merger
   publish:
     runs-on: ubuntu-latest
+    needs: build
     permissions:
       contents: write
     steps:
