fix(CI): use correct name for releasing built binary.

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -56,4 +56,4 @@ jobs:
           prerelease: "false"
           reactions: +1,laugh,hooray,heart,rocket,eyes
           assets: |
-            - path: slides-merger
+            - path: slide-merger
